# ragged

./: .env.example  .gitignore  LICENSE  README.md  check_golden_path.py  docker-compose.yml  pyproject.toml  qr_diagnostic.py  qr_fix.py
examples/: pdf_upload_example.py
ragged/: config.py  main.py
ragged/api/v1/: router.py
ragged/api/v1/endpoints/: health.py  pdf_upload.py  search.py  videos.py
ragged/core/: config.py  database.py
ragged/enterprise/: __init__.py
ragged/models/: base.py  text_chunk.py  user.py
ragged/services/: FaissIndexBuilder.py  TextProcessor.py  text_processing.py  vector_clusterer.py  vector_encoding.py  vector_mp4_writer.py  vector_pipeline_manager.py
ragged/services/uploader/: __init__.py  file_manager.py  interfaces.py  r2_uploader.py  upload_service.py
ragged/tenants/: __init__.py
ragged/video/: CDNDecoder.py  __init__.py  benchmarks.py  config.py  data.txt  decoder.py  encoder.py  index.py  knowledge_graph.py  model_server.py  mp4_structure.py  real_world_test.py  retriever.py  search.py  search_wikipedia.py  simple_memory.py  test_vector_mp4.py  testfile.py  utils.py  wiki.py  wiki_cluster.py  wiki_kg.py  wiki_upload.py
scripts/: CDNDecoderWithCache.py  CDNVectorMP4Decoder.py  r2connect.py  search_r2.py  search_wiki_r2.py  search_wikipedia.py  search_wikipedia_enhanced.py
tests/: conftest.py
tests/api/: upload_test.py
tests/services/: test_r2_uploader.py
tests/video/: test_encoder_decoder.py  test_golden_path.py
