[tool.poetry]
name = "ragged"
version = "0.1.0"
description = "Video-based RAG as a Service"
authors = ["Nikit Phadke <nikitph@gmail.com>"]
readme = "README.md"
packages = [{include = "ragged"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
python-multipart = "^0.0.20"

# TODO: Add full dependencies as needed
# alembic = "^1.12.0"
# celery = "^5.3.0"
# redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
