[tool.poetry]
name = "ragged"
version = "0.1.0"
description = "Video-based RAG as a Service"
authors = ["Nikit Phadke <nikitph@gmail.com>"]
readme = "README.md"
packages = [{include = "ragged"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
python-multipart = "^0.0.20"

# Video processing dependencies
qrcode = {extras = ["pil"], version = "^8.2"}
opencv-python = "^4.11.0"
sentence-transformers = "^4.1.0"
numpy = "^1.26.4"
faiss-cpu = "^1.7.4"
tqdm = "^4.67.1"
Pillow = "^11.2.1"

# TODO: Add full dependencies as needed
# alembic = "^1.12.0"
# celery = "^5.3.0"
# redis = "^5.0.0"
psutil = "^7.0.0"
tiktoken = "^0.9.0"
requests-mock = "^1.12.1"
aiofiles = "^24.1.0"
pypdf2 = "^3.0.1"
reportlab = "^4.4.2"
datasets = "^3.6.0"
boto3 = "^1.38.42"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
